try to set up spacing and colors stop using blue for non-links

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,25 +38,26 @@
 	padding-bottom: 30px;
 	margin-top: 60px;
 	position: static;
+    color: #666666;
 }
 
 /* Styles for section headers, page titles, and overall report content */
 
-.pagetitle {font: 18pt "Gill Sans", "Gill Sans MT", SansSerif; font-weight: bold; color:#666666}
-.pagesubtitle {font: 12pt "Gill Sans", "Gill Sans MT", SansSerif; font-style: italic; color: #666666}
+.pagetitle {font: 18pt "Gill Sans", "Gill Sans MT", SansSerif; font-weight: bold; color:#666666; padding-left: 1px }
+.pagesubtitle {font: 12pt "Gill Sans", "Gill Sans MT", SansSerif; font-style: italic; color: #666666; padding-bottom: 7px; padding-left: 3px }
 
-.metadata {font: 9pt "Gill Sans", "Gill Sans MT", SansSerif; color: #666666; padding-left: 5px; }
-.viewlinks {font: 9pt "Gill Sans", "Gill Sans MT", SansSerif; color: #666666; padding-left: 5px; }
+.metadata {font: 9pt "Gill Sans", "Gill Sans MT", SansSerif; color: #666666; padding-left: 4px; }
+.viewlinks {font: 9pt "Gill Sans", "Gill Sans MT", SansSerif; color: #666666; padding-left: 4px; }
 
 .heading { font: 10pt "Gill Sans", "Gill Sans MT", SansSerif; font-weight: bold; margin-top: 20px; margin-bottom: 10px; clear: both; color: #666666 }
 .subheading { font: 10pt "Gill Sans", "Gill Sans MT", SansSerif; font-weight: bold; margin-top: 7px; margin-bottom: 2px; color: #666666 }
 
 .summaryblock { border-top: solid 1px #AAAAAA; padding-top: 5px; margin-bottom: 5px }
-.titleblock { border-top: solid 1px #AAAAAA; padding-top: 15px; margin-bottom: 5px }
+.titleblock { border-top: solid 1px #AAAAAA; padding-top: 11px; margin-bottom: 5px }
 
 .inlinepict { margin-left: 10px; margin-bottom: 10px }
 
-.report-content {font: 10pt "Gill Sans", "Gill Sans MT", SansSerif}
+.report-content {font: 10pt "Gill Sans", "Gill Sans MT", SansSerif; padding-left: 3px}
 
 .firstcell {padding-left: 15px; white-space: nowrap; }
 .fieldlabel {padding-left: 15px; font: 9pt Courier, Fixed; text-align: right; vertical-align: top}
@@ -73,7 +74,7 @@
 
 .nextlink { text-align: right; font: 10pt "Gill Sans", "Gill Sans MT", SansSerif; font-style: italic; }
 .prevlink { text-align: left; font: 10pt "Gill Sans", "Gill Sans MT", SansSerif; font-style: italic; }
-.pagekind { text-align: center; font: 14pt "Gill Sans", "Gill Sans MT", SansSerif; font-style: italic; color: #99999 }
+.pagekind { text-align: center; font: 11pt "Gill Sans", "Gill Sans MT", SansSerif; font-style: italic; color: #666666 }
 
 /* Anchors, and especially magic rollover popup anchors for Maps. */
 
